--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.11.0",
+    "faker": "^6.6.6",
     "i": "^0.3.7",
     "next": "14.1.4",
     "prisma": "^5.11.0",
